--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,13 +1,17 @@
+unify_backend:
+    resource: "@UnifyBackendBundle/Resources/config/routing.yml"
+    prefix:   /
+
 unify_web:
     resource: "@UnifyWebBundle/Controller/"
     type:     annotation
     prefix:   /
 
-# Internal routing configuration to handle ESI
-# ****** WARNING ******
-# This route should be enabled with caution as it can open a security vulnerability
-# see http://symfony.com/blog/security-release-symfony-2-0-20-and-2-1-5-released for more information
-# ****** WARNING ******
-#_internal:
-#    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
-#    prefix:   /_internal
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
