--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,12 @@
         "sensio/generator-bundle": "2.1.*",
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
-        "kriswallsmith/assetic": "1.1.*@dev"
+        "kriswallsmith/assetic": "1.1.*@dev",
+        "sonata-project/admin-bundle": "2.1.*@dev",
+        "sonata-project/doctrine-orm-admin-bundle": "2.1.*@dev",
+        "sonata-project/cache-bundle": "2.1.*@dev",
+        "knplabs/knp-paginator-bundle": "dev-master"
+        
     },
     "scripts": {
         "post-install-cmd": [
