--- a/src/Unify/WebBundle/Resources/config/services.yml
+++ b/src/Unify/WebBundle/Resources/config/services.yml
@@ -1,7 +1,3 @@
-parameters:
-#    unify_web.example.class: Unify\WebBundle\Example
-
 services:
-#    unify_web.example:
-#        class: %unify_web.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    unify_image_upload:
+        class: Unify\WebBundle\Util\UploadFileUtil
