--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "sonata-project/admin-bundle": "2.1.*@dev",
         "sonata-project/doctrine-orm-admin-bundle": "2.1.*@dev",
         "sonata-project/cache-bundle": "2.1.*@dev",
-        "knplabs/knp-paginator-bundle": "dev-master"
+        "knplabs/knp-paginator-bundle": "dev-master",
+        "raulfraile/ladybug-bundle": "dev-master"
         
     },
     "scripts": {
